@@ -2391,6 +2391,7 @@ void spoton::cleanup(void)
   if(QSqlDatabase::contains("URLDatabase"))
     QSqlDatabase::removeDatabase("URLDatabase");
 
+  m_ui.url_database_connection_information->clear();
   saveSettings();
   delete m_urlCommonCrypt;
 
@@ -6021,6 +6022,9 @@ void spoton::slotShowContextMenu(const QPoint &point)
 			      this, SLOT(slotRenameParticipant(void)));
       action->setProperty("type", "chat");
       menu.addSeparator();
+      menu.addAction(tr("&Derive Gemini pair via SMP secret."),
+		     this,
+		     SLOT(slotDeriveGeminiPairViaSMP(void)));
       menu.addAction(tr("&Reset the SMP machine's internal state to s0."),
 		     this,
 		     SLOT(slotInitializeSMP(void)));
