@@ -979,6 +979,7 @@ void spoton::slotPostgreSQLConnect(void)
     {
       m_ui.postgresqlConnect->setProperty("user_text", "connect");
       m_ui.postgresqlConnect->setText(tr("PostgreSQL Connect"));
+      m_ui.url_database_connection_information->clear();
       m_urlDatabase.close();
       m_urlDatabase = QSqlDatabase();
 
@@ -1034,6 +1035,7 @@ void spoton::slotPostgreSQLConnect(void)
 
   if(dialog.exec() == QDialog::Accepted)
     {
+      m_ui.url_database_connection_information->clear();
       m_urlDatabase.close();
       m_urlDatabase = QSqlDatabase();
 
@@ -1055,6 +1057,8 @@ void spoton::slotPostgreSQLConnect(void)
 
       if(!m_urlDatabase.isOpen())
 	{
+	  m_ui.url_database_connection_information->clear();
+
 	  QString str(m_urlDatabase.lastError().text().trimmed());
 
 	  m_urlDatabase = QSqlDatabase();
@@ -1072,6 +1076,11 @@ void spoton::slotPostgreSQLConnect(void)
 	{
 	  m_ui.postgresqlConnect->setProperty("user_text", "disconnect");
 	  m_ui.postgresqlConnect->setText(tr("PostgreSQL Disconnect"));
+	  m_ui.url_database_connection_information->setText
+	    (QString("%1@%2/%3").
+	     arg(ui.name->text()).
+	     arg(ui.host->text()).
+	     arg(ui.database->text()));
 	  settings.setValue("gui/postgresql_database",
 			    ui.database->text());
 	  settings.setValue("gui/postgresql_host",
